# ZKAttestify-Sp1-verifier

./: Cargo.toml  README.md
example/dob-program/src/: main.rs
example/fibonacci-program/: Cargo.toml
example/fibonacci-program/src/: main.rs
example/json/: DOB-Attestaion_plonk_proof.json
example/script/: Cargo.toml
example/script/src/: main.rs
example/wasm_example/: main.js
example/wasm_verifier/: main.js  package.json
